--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,15 @@
 # This file helps Posit Connect install the necessary packages
 
 shiny
-tidyverse
+dplyr
+tidyr
+ggplot2
+readr
+purrr
+tibble
+stringr
+forcats
+lubridate
 readxl
 scales
 plotly
@@ -10,4 +18,3 @@ ggrepel
 bs4Dash
 bslib
 DT
-lubridate
